# bdd-with-python-mar2025

./: .gitignore  20250331 Introduction to BDD in Python.pptx  README.md  pyproject.toml  requirements.txt
solutions/features/: basket.feature  checkout.feature  login.feature
solutions/features/steps/: __init__.py  basket_steps.py  checkout_steps.py  login_steps.py
solutions/src/webshop/: models.py
workshop/features/: basket.feature  checkout.feature  login.feature
workshop/features/steps/: basket_steps.py  login_steps.py
workshop/src/webshop/: models.py
