[project]
name = "bdd-with-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "behave>=1.2.6",
    "pydantic>=2.10.6",
    "pytest-bdd>=7.3.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.5.0",
]

[tool.ruff]
ignore = ["F811"]
